--- a/style.css
+++ b/style.css
@@ -4,14 +4,18 @@ body {
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 40px;
+}
+
+h2 {
+    font-size: 40px;
 }
 
 .orange-color {
     color: orange;
 }
 
-section {
+.flexiable-container {
     display: flex;
     margin-bottom: 150px;
 }
@@ -43,4 +47,31 @@ section {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.experience-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.experience-item {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px gray;
+}
+
+#full-stack-devloper {
+    border-left: 7px solid tomato;
+}
+
+#baby-web-devloper {
+    border-right: 7px solid blue;
+}
+
+footer p {
+    text-align: center;
 }
